Fix GtkScrolledWindow from clipping

--- a/templates/TrueDark/gtk-3.0/gtk-widgets.css
+++ b/templates/TrueDark/gtk-3.0/gtk-widgets.css
@@ -707,7 +707,11 @@ GtkRadioButton:focus > GtkLabel, GtkCheckButton:focus > GtkLabel {
 
 GtkColorSwatch
 {
-background: none;
+	background: none;
+}
+
+GtkScrolledWindow {
+	background: none;
 }
 
 /*
